chore: exclude test target from the coverage report

--- a/Syntaxis.xcodeproj/xcshareddata/xcschemes/Syntaxis.xcscheme
+++ b/Syntaxis.xcodeproj/xcshareddata/xcschemes/Syntaxis.xcscheme
@@ -27,7 +27,17 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "C98F5D6C23D9BEC2009C5447"
+            BuildableName = "Syntaxis.framework"
+            BlueprintName = "Syntaxis"
+            ReferencedContainer = "container:Syntaxis.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
