refactor: allow build and test for mac and ios

--- a/.github/workflows/branch-check.yml
+++ b/.github/workflows/branch-check.yml
@@ -1,6 +1,6 @@
 name: branch-check
 
-on: 
+on:
   push:
     branches:
       - '*'
@@ -9,9 +9,19 @@ on:
       - master
 
 jobs:
-  build:
-    name: Build & Test
+  test:
+    name: Test ${{ matrix.platform }}
     runs-on: macos-latest
+
+    strategy:
+      matrix:
+        platform: [macosx, iphonesimulator]
+        include:
+          - platform: macosx
+            destination: "arch=x86_64"
+          - platform: iphonesimulator
+            destination: "name=iPhone 11,OS=latest"
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -21,10 +31,28 @@ jobs:
         run: |
           gem install xcpretty
           brew install swiftlint
-          pod install
+          pod install --project-directory=pod-${{ matrix.platform }}
 
       - name: Test
-        run: xcodebuild clean test -workspace Syntaxis.xcworkspace -scheme Syntaxis -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 11,OS=latest" -derivedDataPath ./build -resultBundlePath ./build/run.xcresult -enableCodeCoverage YES | xcpretty --report junit --output reports/test-report.xml
+        run: |
+          xcodebuild clean test -workspace Syntaxis.xcworkspace -scheme Syntaxis -sdk ${{ matrix.platform }} -destination "${{ matrix.destination }}" -derivedDataPath ./build -resultBundlePath ./build/run.xcresult -enableCodeCoverage YES | xcpretty --report junit --output reports/test-report.xml
+
+      - name: Archive
+        uses: actions/upload-artifact@v1
+        with:
+          name: test-result-${{ matrix.platform }}
+          path: ./build/run.xcresult
+
+  report:
+    name: Reports
+    needs: test
+    runs-on: macos-latest
+    
+    steps:
+      - name: Download test results
+        uses: actions/download-artifact@v1
+        with:
+          name: test-result-iphonesimulator
 
       - name: Report Lint
         run: swiftlint lint --config .swiftlint.yml Classes/ Tests/
@@ -33,23 +61,20 @@ jobs:
         run: |
           # extract the coverage information from the result bundle
           xcrun xccov view --report --json build/run.xcresult > cov.json
-        
+
           # clone the tool to convert xccov to lcov
           git clone https://github.com/trax-retail/xccov2lcov
-          
+
           # convert the coverage reports
           cd xccov2lcov ; swift run xccov2lcov ../cov.json > ../lcov.info && cd ..
-          
+
           # download codacy coverage reporter
           curl -H "Authorization: token $CURL_TOKEN" -LS "https://api.github.com/repos/codacy/codacy-coverage-reporter/releases/latest" -o codacy-release.json
           export CODACY_COVERAGE_REPORTER_URL=`python -c "import json; print([x['browser_download_url'] for x in json.load(open('codacy-release.json', 'r'))['assets'] if x['browser_download_url'].endswith('jar')][0])"`
           curl -H "Authorization: token $CURL_TOKEN" -LS "$CODACY_COVERAGE_REPORTER_URL" -o codacy-coverage-reporter.jar
-
-          echo "> ls -la"; ls -la ../
 
           # submit the coverage report to codacy
           java -jar codacy-coverage-reporter.jar report -l Swift --force-language -r lcov.info
         env:
           CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
           CURL_TOKEN: ${{ secrets.CURL_TOKEN }}
-
