chore: fix codacy reporting

--- a/.github/workflows/branch-check.yml
+++ b/.github/workflows/branch-check.yml
@@ -69,15 +69,9 @@ jobs:
           # convert the coverage reports
           cd xccov2lcov ; swift run xccov2lcov ../cov.json > ../lcov.info
 
-      - name: Codacy check
-        run: |
-          # download codacy coverage reporter
-          curl -H "Authorization: token $CURL_TOKEN" -LS "https://api.github.com/repos/codacy/codacy-coverage-reporter/releases/latest" -o codacy-release.json
-          export CODACY_COVERAGE_REPORTER_URL=`python -c "import json; print([x['browser_download_url'] for x in json.load(open('codacy-release.json', 'r'))['assets'] if x['browser_download_url'].endswith('jar')][0])"`
-          curl -H "Authorization: token $CURL_TOKEN" -LS "$CODACY_COVERAGE_REPORTER_URL" -o codacy-coverage-reporter.jar
-
-          # submit the coverage report to codacy
-          java -jar codacy-coverage-reporter.jar report -l Swift --force-language -r lcov.info
-        env:
-          CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
-          CURL_TOKEN: ${{ secrets.CURL_TOKEN }}
+      - name: Codacy
+        if: github.event_name != 'pull_request'
+        uses: codacy/codacy-coverage-reporter-action@v1
+        with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          coverage-reports: lcov.info
